fix: update scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,24 @@ body {
   background: #1a192c;
   color: #fff;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1a192c;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fe288f;
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c91f71fa;
+}
